--- a/local/app/seekPreferences.html
+++ b/local/app/seekPreferences.html
@@ -49,9 +49,9 @@
 <div id="footer" data-role="footer" data-position="fixed" data-theme="f">
 <div data-role="navbar">
 <ul>
-<li><a id="labelTypePrefe1" href="#" onclick="getPreferences(1,1,'');" class="ui-btn-active"></a></li>
-<li><a id="labelTypePrefe2" href="#" onclick="getPreferences(1,2,'');"></a></li>
-<li><a id="labelTypePrefe3" href="#" onclick="getPreferences(1,3,'');"></a></li>
+<li><a id="labelTypePrefe1" href="#" onclick="$('#typePre').val(1)" class="ui-btn-active"></a></li>
+<li><a id="labelTypePrefe2" href="#" onclick="$('#typePre').val(2)" ></a></li>
+<li><a id="labelTypePrefe3" href="#" onclick="$('#typePre').val(3)" ></a></li>
 </ul>
 </div>
 </div><!-- footer -->
@@ -69,24 +69,72 @@ $("#searchPreferences").attr('placeholder',lang.seek);
 $('.list-wrapper').jScroll({hScroll:false});
 },
 after:function(){
-getPreferences(1,$('#typePre').val(),'');//call
+getPreferences(1,'');//call
 $('#group_preferences').on('click','li',function(){
-touchPreferences($('#typePre').val(),$(this).attr('pref'),this,$('a',this).html());
+touchPreferences(this);
 });
+var timeO;
 $('#searchPreferences').keyup(function(e){
-if(e.which!=13)
-getPreferences(1,$('#typePre').val(),$.trim(this.value));
-}).focus(function(){
-if($.trim(this.value)!='')
-getPreferences(1,$('#typePre').val(),'');
-}).blur(function(){
-if($.trim(this.value)=='')
-getPreferences(1,$('#typePre').val(),'');
-}).keyup(function(e){
-getPreferences(1,$('#typePre').val(),$.trim(this.value));
+var text=this.value;
+if(e.which!=13){
+if (timeO) clearTimeout(timeO);
+timeO=setTimeout(function(){
+getPreferences($.trim(text));
+},700);
+}
 });
 }
 });
+function getPreferences(text){
+myAjax({
+type :'GET',
+url :DOMINIO+'controls/users/preferences.json.php?action=sr&term='+$.trim(text),
+dataType:'json',
+error :function(/*resp,status,error*/){
+myDialog('#singleDialog',lang.conectionFail);
+},
+success :function(data){
+var i,pref,out='';
+for(i in data){
+pref=data[i];
+out+= '<li data-icon="plus" pref="'+pref['id']+'">'+
+'<a href="#">'+pref['text']+'</a>'+
+'</li>';
+}
+$('#group_preferences').html(out).listview('refresh');
+$('.list-wrapper').jScroll('refresh');
+}
+});
+}
+function touchPreferences(object){
+myDialog({
+id:'#prefDialog',
+content:'<div style="text-align:center"><div style="width:50%;margin:0 auto;"><strong>'
++$('#footer li a.ui-btn-active').text()+'</strong></div>'
++lang.PREFERENCES_MSJCONFIRMADDPREFE+' (<strong>'+$('a',object).text()+'</strong>)'+'</div>',
+buttons:[{
+name:lang.yes,
+action:function(){
+var dia=this;
+myAjax({
+type:'GET',
+url:DOMINIO+'controls/users/preferences.json.php?type='+$('#typePre').val()+'&code='+$.local('code')+'&p='+$(object).attr('pref')+'&action=add',
+dataType:'json',
+error:function(/*resp,status,error*/){
+myDialog('#singleDialog',lang.conectionFail);
+},
+success:function(){
+$(object).fadeOut('slow');
+dia.close();
+}
+});
+}
+},{
+name:'No',
+action:'close'
+}]
+});
+}
 </script>
 </div><!-- page -->
 </body></html>
