--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -429,7 +429,7 @@ redir(PAGE['tagslist']+'?current=group&id='+$_GET['group']);
 }else if($_GET['product'] && $_GET['product'] !== ''){
 redir(PAGE['storeMypubli']);
 }else{
-//redir(PAGE['timeline']);
+redir(PAGE['timeline']);
 }
 }
 }
