--- a/local/xdk/lstgroups.html
+++ b/local/xdk/lstgroups.html
@@ -40,7 +40,7 @@
 <div data-role="content" class="list-content">
 <div id="pd-wrapper">
 <div id="scroller">
-<div id="pullDown"><div><span class="pullDownIcon"></span><span class="pullDownLabel"></span></div></div>
+<div id="pullDown"><!-- <div><span class="pullDownIcon"></span><span class="pullDownLabel"></span></div> --></div>
 <div><ul data-role="listview" id="group_title" data-divider-theme="b" class="list-info"></ul></div>
 <div id="pullUp"><div><span class="pullUpIcon"></span><span class="pullUpLabel">Pull up to refresh...</span></div></div>
 </div>
@@ -60,7 +60,6 @@ $('#btnGroupCreated').html(lang.GROUPS_TITLEWINDOWSNEW);
 $('#searchPreferences').attr('placeholder', lang.PREFERENCES_HOLDERSEARCH);
 },
 after:function(){
-console.log('hola');
 var el=$('#group_title'),$wrapper=$('#pd-wrapper',this.id);
 //getting group title
 //var action = $_GET['action']||2;
@@ -73,11 +72,11 @@ $('#titleGroups').html(lang.GROUPS_MYGROUPS);
 }
 $('#group_title').on('click','li',function(){ menuGroupsClose($(this).attr('group')); });
 $wrapper.ptrScroll({
-onPullDown:function(){},
+// onPullDown:function(){},
 onPullUp:function(){
 var cant=$('li',el);
 if (cant.length>0 && cant.length%12==0) cargarList(action,cant.length);
-
+else $wrapper.jScroll('refresh');
 },
 onReload:function(){ cargarList(action,''); }
 });
