--- a/local/xdk/storeOption.html
+++ b/local/xdk/storeOption.html
@@ -208,7 +208,7 @@ $('.list-wrapper').jScroll({hScroll:false});
 makeListWish();
 function makeListWish(){
 myAjax({
-type: 'GET',
+type: 'POST',
 url: DOMINIO+'controls/store/shoppingCart.json.php?lisWihs=1',
 dataType: 'json',
 error :function(/*resp,status,error*/){
