task 159 creando html: xdk timeline.html
Former-commit-id: d1eff0b354348fa2800dec6dbe9ad85410ba4f89 [formerly 2e55cf1f847f32d421d81d069a57272a18e34b8b]
Former-commit-id: d7745c44e4652886736939e4bca9d52f615a7d7b

--- a/local/xdk/timeLine.html
+++ b/local/xdk/timeLine.html
@@ -68,6 +68,9 @@ window.location.reload();
 <div data-role="navbar"><ul></ul></div>
 </div>
 <script>
+var page = $.local('timeLine');
+var active_tab = 'timeLine';
+if (page) active_tab = page.last_tab;
 //if(navigator.app) navigator.app.clearHistory();
 pageShow({
 id:'page-timeLine',
@@ -88,8 +91,19 @@ $('#private-select').append(
 );
 },
 after:function(){
+if (active_tab != 'timeLine') {
+$('#tl-footer ul li a').removeClass('ui-btn-active');
+$('#tl-footer ul li a[opc='+active_tab+']').addClass('ui-btn-active');
+if(active_tab=='privateTags'){
+$('#private-select').show();
+$('#userPoints').hide();
+}else{
+$('#private-select').hide();
+$('#userPoints').show();
+}
+}
 var opc={ 
-current:'timeLine',
+current: active_tab,
 layer:$('#tagsList')[0]
 },
 $wrapper=$('#pd-wrapper',this.id);
@@ -105,7 +119,10 @@ onPullDown:function(){
 updateTags('reload',opc);
 },
 onPullUp:function(){
-updateTags('more',opc);
+var response = updateTags('more',opc);
+if (!response) {
+$wrapper.jScroll('refresh');
+};
 },
 onReload:function(){
 updateTags('reload',opc,true);
@@ -122,6 +139,7 @@ $wrapper.ptrScroll('reload');
 });
 $('#tl-footer ul').on('click','a',function(){
 var c=$(this).attr('opc');
+$.local('timeLine', {'last_tab':c});
 if(opc.current!=c){
 opc.current=c;
 if(opc.current=='privateTags'){
