--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -450,7 +450,10 @@ myDialog({
 id:'#tagUploadDialog',
 content:data,
 buttons:{
-Ok:function(){redir(PAGE['timeline']);}
+Ok:function(){
+localStorage.removeItem('timeLine');
+redir(PAGE['timeline']);
+}
 }
 });
 }
