ajustes redireccion en creacion de tag
Former-commit-id: 60a0bc7d7250440ffb10a37521fc806899bbf7a9

--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -429,6 +429,7 @@ redir(PAGE['tagslist']+'?current=group&id='+$_GET['group']);
 }else if($_GET['product'] && $_GET['product'] !== ''){
 redir(PAGE['storeMypubli']);
 }else{
+localStorage.removeItem('timeLine');
 redir(PAGE['timeline']);
 }
 }
