--- a/local/xdk/news.html
+++ b/local/xdk/news.html
@@ -132,7 +132,7 @@ out+=newsFormat(d);
 break;
 case 'usr':
 d.source=info['keyUser'];
-d.photo =info['friend'][0]['photo']+'" style="height:90%;';
+d.photo =info['usrs'][0]['photo']+'" class="userBR" style="height:90%;';
 d.txt=txtFormat({
 type:info['id_type'],
 people:people,
