--- a/local/xdk/shareTag.html
+++ b/local/xdk/shareTag.html
@@ -165,7 +165,7 @@ redir(PAGE['timeline']);
 },
 success : function( data ){
 var tag=data['tags'][0];
-$('#tag_shareTag').html(showTag(tag));
+//$('#tag_shareTag').html(showTag(tag));
 windowFix();
 setTimeout(function(){$('#fs-wrapper').jScroll('refresh'),300});
 }
