--- a/local/xdk/tagsList.html
+++ b/local/xdk/tagsList.html
@@ -191,21 +191,23 @@ function getMembersGroup(){
 console.log('getMembersGroup');
 myAjax({
 loader : true,
-type : 'GET',
-url : DOMINIO+'controls/groups/getMembersGroup.json.php?id='+$.local('code')+'&idGroup='+id,
+type : 'POST',
+url : DOMINIO+'controls/users/people.json.php?action=groupMembers&code&idGroup='+id,
+data :{uid:$.local('code')},
 dataType: 'json',
 success : function(data) {
 var i,friend,ret = '';
-for(i in data){
-friend=data[i];
+for(i in data['datos']){
+friend=data['datos'][i];
 ret +=
 '<div code="'+friend['code']+'" style="height: 60px; min-width: 200px; padding: 5px 0px 5px 0px; border-bottom: solid 1px #D4D4D4">'+
-'<img src="'+friend['photo']+'" style="float:left; width:60px; height:60px;"/>'+
+'<img src="'+friend['photo_friend']+'" style="float:left; width:60px; height:60px;" class="userBR"/>'+
 '<div style="float: left; margin-left:5px; font-size:10px; text-align: left;">'+
-'<spam style="color:#E78F08; font-weight:bold; ">' + friend['name'] + '</spam><br/>'+
+'<spam style="color:#E78F08; font-weight:bold; ">' + friend['name_user'] + '</spam><br/>'+
 (friend['country'] ? ''+lang.country+': '+friend['country']+'<br/>' : '')+
 ''+lan('friends','ucw')+'('+friend['friends_count']+')<br/>'+
-''+lan('admirers','ucw')+'('+friend['followers_count']+')'+
+''+lan('admirers','ucw')+'('+friend['followers_count']+')<br/>'+
+((friend['status'])?'<strong style="color:green">'+lan('active','ucw')+'</strong>':'<strong style="color:red">'+lan('inactive','ucw')+'</strong>')+
 '</div>'+
 '</div>';
 }
@@ -225,25 +227,25 @@ console.log('getFriendsGroup');
 like=like?'&like='+like:'';
 myAjax({
 loader :true,
-type :'GET',
-url :DOMINIO+'controls/users/getFriends.json.php?id='+$.local('code')+like+'&idGroup='+id,
+type :'POST',
+url :DOMINIO+'controls/users/people.json.php?nosugg&action=friendsAndFollow&mod=friends&code='+$.local('code')+like+'&idGroup='+id,
 dataType:'json',
 success :function(data){
 var friend,ret='';
-for(var i in data){
-friend=data[i];
+for(var i in data['datos']){
+friend=data['datos'][i];
 //if(emails.join().indexOf(friend['email'])<0)
 ret+=
-'<div id="'+friend['id']+'" onclick="$(\'#friend_'+friend['id']+'\').attr(\'checked\', ($(\'#friend_'+friend['id']+'\').is(\':checked\')) ? false : true);" style="height: 60px; min-width: 200px; padding: 5px 0px 5px 0px; border-bottom: solid 1px #D4D4D4">'+
+'<div onclick="$(\'input\',this).is(\':checked\')?$(\'input\',this).removeProp(\'checked\'):$(\'input\',this).attr(\'checked\',true);" style="height: 60px; min-width: 200px; padding: 5px 0px 5px 0px; border-bottom: solid 1px #D4D4D4">'+
 '<div style="float: right; padding-top: 20px; margin-right: 15px;">'+
 '<fieldset data-role="controlgroup">'+
-'<input id="friend_'+friend['id']+'" name="friend_'+friend['id']+'" '+
+'<input name="friend_'+friend['id']+'" '+
 'value="'+friend['email']+'|'+friend['id']+'|'+id+'" type="checkbox" />'+
 '</fieldset>'+
 '</div>'+
-'<img src="'+friend['photo']+'" style="float: left; width: 60px; height: 60px;"/>'+
+'<img src="'+friend['photo_friend']+'" style="float: left; width: 60px; height: 60px;" class="userBR"/>'+
 '<div style="float: left; margin-left: 5px; font-size: 10px; text-align: left;">'+
-'<spam style="color: #E78F08; font-weight: bold; ">' + friend['name'] + '</spam><br/>'+
+'<spam style="color: #E78F08; font-weight: bold; ">' + friend['name_user'] + '</spam><br/>'+
 (friend['country'] ? ''+lang.country+': '+friend['country']+'<br/>' : '')+
 ''+lan('friends','ucw')+'('+friend['friends_count']+')<br/>'+
 ''+lan('admirers','ucw')+'('+friend['followers_count']+')'+
@@ -271,7 +273,7 @@ console.log('assignAdminGroup');
 like = like ? '&like='+like : '';
 myAjax({
 loader : true,
-type : 'GET',
+type : 'POST',
 url : DOMINIO+'controls/groups/adminMemberGroup.json.php?id='+$.local('code')+like+'&idGroup='+id,
 dataType: 'json',
 success : function(data) {
@@ -359,7 +361,7 @@ action:function (){
 var that=this;
 console.log('button yes');
 myAjax({
-type : 'GET',
+type : 'POST',
 url : DOMINIO+'controls/groups/isAdminGroup.json.php?code='+$.local('code')+'&idGroup='+id,
 dataType: 'json',
 error : function(resp, status, error) {
@@ -402,7 +404,7 @@ action:function(){
 $('#selectAdmin').fadeOut(300,function(){
 console.log(lang.GROUPS_LEAVEABANDONAR);
 myAjax({
-type : 'GET',
+type : 'POST',
 url : DOMINIO+'controls/groups/isAdminGroup.json.php?code='+$.local('code')+'&idGroup='+id+'&act=leave',
 dataType: 'json',
 error : function(/*resp, status, error*/) {
