--- a/local/xdk/profile.html
+++ b/local/xdk/profile.html
@@ -40,7 +40,7 @@
 <div id="scroller">
 <div>
 <div style="height:60px;margin:19px;">
-<img id="userPicture" style="float:left;height:60px;width:60px;" />
+<img id="userPicture" style="float:left;height:60px;width:60px;" class="userBR" />
 <div id="userInfo" style="float:left;margin-left:13px;"></div>
 </div>
 <a id="pictureButton" style="display:none;" data-role="button" data-theme="c">&nbsp;</a>
@@ -80,7 +80,6 @@ $('#userPreferences').html(lang.USERPROFILE_PREFERENCES_TITLE);
 $('#pictureButton').html(lan(CORDOVA?'change picture':'edit thumbnail','ucw'));
 },
 after:function(){
-console.log('test');
 var code=$_GET['id']||$.local('code'),
 me=(code==$.local('code'));//me=true si es el perfil del usuario loggeado
 $('.fs-wrapper').jScroll({hScroll:false});
@@ -119,17 +118,17 @@ if(num===undefined||num===null||num<0) num='<loader/>';
 $('.ui-btn-text b',button).html(num||0);
 }
 function setFriendsButtons(data){data=data||{};
-fillButton('#userFriends', data['friends']);
-fillButton('#userFollowers',data['admirers']);
-fillButton('#userFollowing',data['admired']);
+fillButton('#userFriends', data['friends_count']);
+fillButton('#userFollowers',data['following_count']);
+fillButton('#userFollowing',data['followers_count']);
 }
 setFriendsButtons(data);
 fillButton('#userTags', data['numTags']);
 fillButton('#userPersonalTags', data['numPersTags']);
-if(data['thumb']) $('#userPicture').attr('src',data['thumb']);
+if(data['photo_friend']) $('#userPicture').attr('src',data['photo_friend']);
 
 var birth=lan(data['birthday'],'ucw'),
-txt='<div><strong>'+(data['userName']||'')+'</strong></div>';
+txt='<div><strong>'+(data['username']||'')+'</strong></div>';
 if(data['type']=='0')
 txt+=(birth!='none'?'<div><strong>'+lang.PROFILE_BIRTHDATE+':</strong> '+birth+'</div>':'');
 else
@@ -154,11 +153,13 @@ else preferencesUsers(code);
 });
 if(me){
 $('#followButton').remove();
-if(data['thumb']){
+if (CORDOVA)
+if(data['photo_friend']){
 $('#pictureButton').fadeIn('slow').click(function(){
 redir(PAGE['profilepic']);
 });
 }
+else $('#pictureButton').remove();
 }else{
 $('#pictureButton').remove();
 var $follow=$('#followButton');
@@ -185,10 +186,11 @@ $follow.fadeIn('slow');
 }
 }
 myAjax({
-url:DOMINIO+'controls/users/getProfile.json.php?code='+code,
+url:DOMINIO+'controls/users/people.json.php?action=specific&code',
+data:{uid:code},
 success:function(data){
-console.log('success '+data['userName']);
-loadProfile(data);
+console.log('success '+data['datos'][0]['username']);
+loadProfile(data['datos'][0]);
 },
 error:function(){
 console.log('error');
