--- a/local/xdk/search.html
+++ b/local/xdk/search.html
@@ -144,6 +144,7 @@ case 3:
 pref['privacidad'] = lang.GROUPS_PRIVATE;
 break;
 }
+console.log(pref['privacidad']);
 outG +=
 '<li group="'+pref['id']+'">'+
 '<img src="'+pref['icon']+'" class="ui-li-icon-group" width="16" height="16" />'+
