--- a/local/xdk/storeOption.html
+++ b/local/xdk/storeOption.html
@@ -208,8 +208,7 @@ $('.list-wrapper').jScroll({hScroll:false});
 makeListWish();
 function makeListWish(){
 myAjax({
-type: 'POST',
-url: DOMINIO+'controls/store/shoppingCart.json.php?lisWihs=1',
+url: DOMINIO+'controls/store/shoppingCart.json.php?lisWihs=1&appMobile',
 dataType: 'json',
 error :function(/*resp,status,error*/){
 myDialog('#singleDialog',lang.conectionFail);
