--- a/local/xdk/signUp.html
+++ b/local/xdk/signUp.html
@@ -191,9 +191,7 @@ console.log(data['msg']+data['email']);
 if(data['msg']=='1'){
 myDialog(single?lang.SIGNUP_CTRERRORNAME:lang.SIGNUP_CTRERRORNAMENTER);
 }else if(data['msg']=='2'){
-if(data['comp']=='0'){
 myDialog(lang.SIGNUP_CTRERRORLASTNAME);
-}
 }else if(data['msg']=='3'){
 myDialog(lang.SIGNUP_CTRERROREMAIL);
 }else if(data['msg']=='4'){
@@ -208,6 +206,8 @@ myDialog(lang.USERPROFILE_PASSWORD);
 myDialog(lang.SIGNUP_CONFIRMPASSWORD);
 }else if(data['msg']=='9'){
 myDialog(lang.SMT_SIGNUP_PASSWORDNOTMATCH);
+}else if(data['msg']=='10'){
+myDialog(lang.SIGNUP_CTRERRORBIRTHDATE);
 }else{
 myDialog({
 id:'#singleRedirDialog',
