--- a/local/xdk/resendPass.html
+++ b/local/xdk/resendPass.html
@@ -30,7 +30,6 @@
 <script src="js/core/jScroll.js"></script>
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
-<script src="js/app.js"></script>
 <script src="js/min.js"></script>
 </head><body><div id="page-resend" data-role="page" data-cache="false">
 <div data-role="header" data-position="fixed" data-theme="f">
@@ -87,7 +86,7 @@ if(logged) redir(PAGE['home']);
 after:function(){
 $('#bntBack').click(function(){
 if($_GET['usr'])
-redir(PAGE['ini']);
+redir(PAGE.ini);
 else
 goBack();
 });
@@ -122,7 +121,7 @@ content:'<div style="font-weight: bold;text-align:center;">'+lang.RESET_MSGNRESE
 style:{'max-height':30,'height':30,'padding':'10px 10px'},
 buttons:{
 'Ok':function(){
-redir(PAGE['ini']);
+redir(PAGE.ini);
 }
 }
 });
