--- a/local/xdk/tag.html
+++ b/local/xdk/tag.html
@@ -30,7 +30,6 @@
 <script src="js/core/jScroll.js"></script>
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
-<script src="js/app.js"></script>
 <script src="js/min.js"></script>
 </head><body><div id="page-tag" data-role="page" data-cache="false">
 <div data-role="header" data-theme="f" data-position="fixed">
@@ -71,7 +70,7 @@ var Change=isLogged();
 pageShow({
 id:'#page-tag',
 before:function(){
-$('#buttonBack').html(isLogged()?lan('Back'):lang.home).click(function(){ if(isLogged()) goBack(); else redir(PAGE['ini']); });
+$('#buttonBack').html(isLogged()?lan('Back'):lang.home).click(function(){ if(isLogged()) goBack(); else redir(PAGE.ini); });
 $('#goProfile').html(lang.profile);
 $('#tagNoExits').html(lang.TAGS_WHENTAGNOEXIST);
 },
