--- a/local/xdk/timeLine.html
+++ b/local/xdk/timeLine.html
@@ -30,7 +30,6 @@
 <script src="js/core/jScroll.js"></script>
 <script src="js/core/farbtastic.js"></script>
 <script src="js/core/colorPicker.js"></script>
-<script src="js/app.js"></script>
 <script src="js/min.js"></script>
 </head><body><script>
 //$.session('countpage',0);
@@ -39,6 +38,7 @@ $.session('_post_',null);
 window.location.reload();
 }
 </script>
+<div id="singleRedirDialog" class="myDialog" style="display: none;"><div class="table"><div class="cell"><div class="window" style="max-height: 272px; display: block;"><div class="container" style="max-height: 272px;"><div id="scroller" class="content">Está seguro que quiere eliminar esta tag?</div></div><div class="buttons"><a action="0" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-hover-f ui-btn-up-f ui-btn-up-undefined"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Sí</span></span></a><a action="1" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-hover-f ui-btn-up-f ui-btn-up-undefined"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">No</span></span></a></div></div></div></div><div class="closedialog" style="display:none"></div></div>
 <div id="page-timeLine" data-role="page" data-cache="false">
 <div data-role="header" data-theme="f" data-position="fixed">
 <div style="position:absolute;top:0px;left:0;padding:0 5px;">
@@ -119,8 +119,8 @@ myAjax({
 type:'GET',
 url:DOMINIO+'controls/tags/actionsTags.controls.php?action=4&tag='+tagId,
 dataType:'html',
+loader: false,
 success:function( data ){
-console.log(e.currentTarget)
 $(e.currentTarget).find('#dislikeIcon').fadeOut('slow',function(){
 $(e.currentTarget).find('#likeIcon').fadeIn('slow');
 });
@@ -131,45 +131,6 @@ $(e.currentTarget).find('#likeIcon').fadeIn('slow');
 // $(opc.layer).on('click','[tag]',function(){
 // redir(PAGE['tag']+'?id='+$(this).attr('tag'));
 // });
-function dialogComment(id){
-var opc={//comment data
-layer:'#comments',
-scroller:'.fs-wrapper',
-data:{
-type:4,
-source:id,
-limit:10,
-mobile:1
-},
-likes:0,
-dislikes:0
-};
-console.log('dialogComment. id='+id);
-myDialog({
-id:'#commentDialog',
-style:{'margin-right':10},
-content:
-'<div style="padding:10px;"><textarea name="txtComment" id="txtComment" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset"'+
-'style="resize:none;width:100%" rows="5" placeholder="'+lang.COMMENTS_LBLHELPIMPUTNEWCOMMENT+'"></textarea></div>',
-buttons:[{
-name:lang.send,
-action:function(){
-var comment=$.trim($('#txtComment').val());
-if(comment!=''&&comment!=lang.COMMENTS_LBLHELPIMPUTNEWCOMMENT){
-//comment = limpiaTextComentarios(comment);
-var $this=$(this);
-opc.complete=function(){$this.close();};
-insertComment(comment,opc);
-}
-$('#commentDialog .closedialog').click();
-$('.fs-wrapper').jScroll('refresh');
-}
-},{
-name:lang.close,
-action:'close'
-}]
-});
-}
 function afterAjax(data, tagId, toHide,toShow){
 console.log('tagID:'+tagId+'--'+toHide+'--'+toShow);
 if(data.indexOf('ERROR')<0){
@@ -184,7 +145,30 @@ var btnPresed = e.target.id;
 switch(e.target.id){
 case 'report':redir(PAGE['reporttag']+'?id='+tagtId);break;
 case 'share':redir(PAGE['sharetag']+'?id_tag='+tagtId);break;
-case 'comment':dialogComment(tagtId);break;
+case 'comment':
+$('#comments').remove();
+$('[tag='+tagtId+']').append(
+'<div class="is-logged tag-comments-window smt-tag-content">'+
+'<ul id="comments" data-role="listview" data-inset="true" class="tag-comments ui-listview list" data-divider-theme="e"></ul>'+
+'</div>'
+);
+$('#comments').listview();
+getComments('reload',{
+layer:'#comments',
+scroller:'.fs-wrapper',
+data:{
+type:4,
+source:tagtId,
+limit:10,
+mobile:1
+},
+likes:0,
+dislikes:0
+});
+// var interval=setInterval(function(){
+// getComments('refresh',opc);
+// },7000);
+break;
 case 'like':case 'dislike':
 var that=e.target.id+'Icon',
 show=e.target.id!='like'?'likeIcon':'dislikeIcon';
@@ -192,12 +176,14 @@ myAjax({
 type:'POST',
 url:DOMINIO+'controls/tags/actionsTags.controls.php?action='+(that=='likeIcon'?4:11)+'&tag='+tagtId,
 dataType:'html',
+loader: false,
 success:function( data ){
 afterAjax(data,tagtId,'.tag-icons #'+show,'.tag-icons #'+that);
 myAjax({
 type:'POST',
 url:DOMINIO+'controls/tags/actionsTags.controls.php?action=12&tag='+tagtId,
 dataType:'html',
+loader: false,
 success:function( data ){
 data= data.split('|');
 // opc.likes=data[0];
@@ -216,25 +202,30 @@ myAjax({
 type:'POST',
 url:DOMINIO+'controls/tags/actionsTags.controls.php?action=3&tag='+tagtId,
 dataType:'html',
+loader: false,
 success:function( data ){
 afterAjax(data, tagtId,'menu #redistr', '.tag-icons #redist');
 }
 });
 break;
-case 'delete':
-//var url=$_GET['idGroup']?(PAGE['tagslist']+'?current=group&id='+$_GET['idGroup']):PAGE['timeline'];
+case 'trash':
 myDialog({
 id:'#singleRedirDialog',
 content:lang.JS_DELETETAG,
+loader: false,
 buttons:[{
 name:lang.yes,
 action:function(){
+var dialog = this;
 myAjax({
 type: 'POST',
 url: DOMINIO+'controls/tags/actionsTags.controls.php?action=6&tag='+tagtId,
 dataType: 'html',
 success: function( data ) {
-//redir(url);
+$('[tag='+tagtId+']').fadeOut('fast',function(){
+$(this).remove();
+dialog.close();
+});
 }
 });
 }
