tarea #174 ajustes en notificaciones, news, amigos
Former-commit-id: 360b58086604a6457aaf71cfac915279f23192b8

--- a/local/xdk/notifications.html
+++ b/local/xdk/notifications.html
@@ -112,6 +112,7 @@ act=opc.actions[action=='refresh'?'refresh':'more'];
 if(loader) $.loader('show');
 //si no hay mas tag, se cancela la consulta
 if(act.more===false){ return onca(false); }
+
 myAjax({
 url :DOMINIO+'controls/notifications/notifications.json.php?checked&action='+action+(opc.date?'&date='+opc.date:'')+get,
 data :$.extend({},act,defaultNotificationTypes),
@@ -197,7 +198,18 @@ $(layer).append(out);
 else
 $(layer).prepend(out);
 $(layer).listview('refresh');
+}else{
+if($(layer).html()==''){
+$(layer).append('<div class="emptyInfo">'+lang.EMPTY_INFO_NOTIFICATION+'<br><br><div id="findFriends" style="font-weight:bold">'+lang.FIND_FRIENDS_NOTIFICATION+'</div></div>');
+$('#pullUp').hide();
+$('#findFriends').click(function(event) {
+redir(PAGE['findfriends']);
+});
 }
+}
+
+// verif++;
+// alert(verif);
 $wrapper.jScroll('refresh');
 },
 complete:function(){
@@ -233,6 +245,7 @@ default: alert(type);
 }
 
 });
+
 $wrapper.ptrScroll({
 onPullDown:function(){
 console.log('refresh');
@@ -247,6 +260,13 @@ console.log('reload');
 updateNews('reload',opc);
 }
 });
+// $('#findF').click(function(event) {
+// redir(PAGE['findfriends']);
+// });
+// $('.emptyInfo').on('click', '#findF', function(event) {
+// redir(PAGE['findfriends']);
+// /* Act on the event */
+// });
 }
 });
 </script>
