--- a/local/xdk/newtag.html
+++ b/local/xdk/newtag.html
@@ -89,7 +89,7 @@
 <label id="emails_legend_newtag" style="font-size:10px;"></label>
 </div>
 <div id="div_shareFriends" class="smt-div-profile dnone">
-<input id="button_shareFriends" type="button" onclick="selectFriendsDialog('shareTagDialog',$.local('code'))"/>
+<input id="button_shareFriends" type="button" onclick="selectFriendsDialog($.local('code'))"/>
 <div id="title_pictures_shareTag" style="font-size:10px;text-align:center;height:15px;display:none;"></div>
 <div id="pictures_shareTag" style="height:40px;margin-bottom:10px;text-align:center;overflow:hidden;"></div>
 </div>
