--- a/local/xdk/tag.html
+++ b/local/xdk/tag.html
@@ -147,7 +147,7 @@ var test='';
 myAjax({
 type :'POST',
 dataType:'json',
-url :DOMINIO+'controls/tags/tagsList.json.php?id='+$_GET['id']+(is['iOS']?'&embed':''),
+url :DOMINIO+'controls/tags/tagsList.json.php?this_is_app&id='+$_GET['id']+(is['iOS']?'&embed':''),
 error :function(/*resp,status,error*/){
 myDialog({
 id:'#singleRedirDialog',
