--- a/local/xdk/tagsList.html
+++ b/local/xdk/tagsList.html
@@ -123,10 +123,7 @@ $('#like_friend_group, #like_admin_group').attr('placeholder',lang.inputPlaceHol
 },//end before
 after:function(){
 var current=$_GET['current']||'tagsUser',layer='#tagsList',id=$_GET['id'];
-var opc={
-current:current,
-layer: layer
-};
+var opc={current:current,layer: layer };
 if((current=='tagsUser')||(current=='personalTags')){
 opc.get='&uid='+$_GET['id'];
 }
@@ -135,20 +132,22 @@ opc.get='&grupo='+$_GET['id'];
 opc.id=$_GET['id'];
 opc.code=$.local('code');
 }
-if(current=='hash'){
-opc.get='&hash='+$_GET['hash'];
-}
+if(current=='hash') opc.get='&hash='+$_GET['hash'];
 $('#buttonBack').click(function(){
 ($_GET['delete'])?((redir(PAGE['tagslist']+'?current=group&id='+id))):goBack();
 });
 $('#friendsListDialog .wrapper,#adminLeaveDialog .wrapper').jScroll({hScroll:false});
-$(layer).on('click','[tag]',function(){
-if($(this).attr('tag')!=''){
-var get=['id='+$(this).attr('tag')];
-if(current=='group') get.push('idGroup='+id);
-redir(PAGE['tag']+'?'+get.join('&'));
-}
-});
+// $(layer).on('click','[tag]',function(){
+// if($(this).attr('tag')!=''){
+// var get=['id='+$(this).attr('tag')];
+// if(current=='group') get.push('idGroup='+id);
+// redir(PAGE['tag']+'?'+get.join('&'));
+// }
+// });
+/*action menu tag*/
+actionsTags(opc.layer);
+/*and action menu tag*/
+
 $('#pd-wrapper',this.id).ptrScroll({
 onPullDown:function(){
 updateTagsOld('refresh',opc);
@@ -167,7 +166,6 @@ $('#pageTitle').html(lang.MAINMNU_PERSONALTAGS);
 }else if(current=='group'){
 $('#pageTitle').html(lan('group','ucw'));
 nameMenuGroups(id,0,function(data){
-console.log(data);
 $('#pageTitle').html(lan('group','ucw')+': '+data['name']);
 verifyGroupMembership(id,$.local('code'),function(data){
 if(data['isMember']){
@@ -472,6 +470,7 @@ action:function(){ this.close(); }
 }
 }//end after
 });
+
 </script>
 </div>
 </body></html>
