--- a/local/xdk/topTags.html
+++ b/local/xdk/topTags.html
@@ -83,9 +83,9 @@ notag:noTagsTxt($_GET['range']||0),
 get:$_GET['range']?'&range='+$_GET['range']:''
 },
 $wrapper=$('#pd-wrapper',this.id);
-$(opc.layer).on('click','[tag]',function(){
-redir(PAGE['tag']+'?id='+$(this).attr('tag'));
-});
+// $(opc.layer).on('click','[tag]',function(){
+// redir(PAGE['tag']+'?id='+$(this).attr('tag'));
+// });
 $wrapper.ptrScroll({
 onPullDown:function(){
 updateTags('reload',opc);
@@ -101,7 +101,9 @@ opc.get='&range='+data;
 updateTags('reload',opc,true);
 }
 });
-
+/*action menu tag*/
+actionsTags(opc.layer);
+/*and action menu tag*/
 $('#footer-icons').on('click','a',function(){
 $wrapper.ptrScroll('reload',$(this).attr('opc'));
 });
