--- a/local/xdk/shareTag.html
+++ b/local/xdk/shareTag.html
@@ -69,7 +69,7 @@
 <div id="footer" data-role="footer" data-position="fixed" data-theme="f">
 <div data-role="navbar">
 <ul>
-<li><a id="friends" onclick="selectFriendsDialog('shareTagDialog',$.local('code'))"></a></li>
+<li><a id="friends" onclick="selectFriendsDialog($.local('code'))"></a></li>
 </ul>
 </div>
 </div>
@@ -150,7 +150,7 @@ $('#publish_newTag').one('click',shareTag);
 myAjax({
 type :'GET',
 dataType:'json',
-url :DOMINIO+'controls/tags/tagsList.json.php?id='+$_GET['id_tag'],
+url :DOMINIO+'controls/tags/tagsList.json.php?this_is_app&id='+$_GET['id_tag'],
 error :function(/*resp,status,error*/) {
 myDialog({
 id:'#singleRedirDialog',
