--- a/local/xdk/index.html
+++ b/local/xdk/index.html
@@ -129,20 +129,36 @@ $('#btn-login-change .ui-btn-text').css('padding','0 10px');
 // }
 
 //Login facebook
+// window.fbAsyncInit=function(){
+// FB.init({
+// appId:'675184659179966',
+// xfbml:true,
+// version:'v2.2'
+// });
+// };
+
+// (function(d, s, id){
+// var js, fjs = d.getElementsByTagName(s)[0];
+// if (d.getElementById(id)) {return;}
+// js = d.createElement(s); js.id = id;
+// js.src = "//connect.facebook.net/en_US/sdk.js";
+// fjs.parentNode.insertBefore(js, fjs);
+// }(document, 'script', 'facebook-jssdk'));
+
 window.fbAsyncInit = function() {
 FB.init({
-appId: '141402139297347',
-cookie: true,
-xfbml: true,
-oauth: true,
-status: true
+appId:'675184659179966',
+cookie:true,
+xfbml:true,
+oauth:true,
+status:true
 });
 };
 (function(d, s, id) {
 var js, fjs = d.getElementsByTagName(s)[0];
 if (d.getElementById(id)) return;
 js = d.createElement(s); js.id = id;
-js.src = "//connect.facebook.net/en_Us/all.js";
+js.src = "http://connect.facebook.net/en_Us/all.js";
 fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 
