Eliminando imagenes sin usar y reorganizando
Former-commit-id: c606c8d73a128de5a4ece22bc507a758d5488c34

--- a/local/xdk/index.html
+++ b/local/xdk/index.html
@@ -131,7 +131,7 @@ $('#btn-login-change .ui-btn-text').css('padding','0 10px');
 //Login facebook
 // window.fbAsyncInit=function(){
 // FB.init({
-// appId:'675184659179966',
+// appId:'',
 // xfbml:true,
 // version:'v2.2'
 // });
@@ -147,7 +147,7 @@ $('#btn-login-change .ui-btn-text').css('padding','0 10px');
 
 window.fbAsyncInit = function() {
 FB.init({
-appId:'675184659179966',
+appId:'',
 cookie:true,
 xfbml:true,
 oauth:true,
